--- a/Card-scroll-animation/index.html
+++ b/Card-scroll-animation/index.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML & CSS Card Scroll</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="card-group">
+        <article class="card">
+            <h2>What is Flexbox?</h2>
+            <p>1D layout tool to align elements easily</p>
+        </article>
+        <article class="card">
+            <h2>CSS Grid vs Flex</h2>
+            <p>2D vs 1D layout comparison guide.</p>
+        </article>
+        <article class="card">
+            <h2>CSS Selectors</h2>
+            <p>Target elements with precision and style.</p>
+        </article>
+        <article class="card">
+            <h2>Responsive Design</h2>
+            <p>Make your layouts adapt magically.</p>
+        </article>
+    </div>
+</body>
+</html>
